<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="air_quality_index">Air quality index</string>
    <string name="co">CO</string>
    <string name="no">NO</string>
    <string name="no2">NO2</string>
    <string name="o3">O3</string>
    <string name="so2">SO2</string>
    <string name="pm2_5">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="nh3">NH3</string>

</resources>